apps/databases/postgis-networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: postgis-ingress-egress
  namespace: databases
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: postgis-cluster
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cnpg-system
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: vault
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: databases
            app.kubernetes.io/name: seaweedfs
      toPorts:
        - ports:
            - port: "swfs-s3"
              protocol: TCP
